debian-policy (3.7.4.0) unstable; urgency=low

  * Bug fix: "[AMENDMENT 11/02/2008] Manual page encoding", thanks to
    Colin Watson                                             (Closes: #440420).
  * Bug fix: "Documentation for Breaks in dpkg", thanks to Ian Jackson
                                                             (Closes: #379150).
  * Bug fix: "support for wrapped Uploaders should now be mandatory"
                                                             (Closes: #431813).
  * Bug fix: "[PROPOSAL] Add should not embed code from other packages",
    thanks to Neil McGovern, Colin Watson, Bill Allombert, Steve Langasek,
    Kurt Roeckx, and others                                  (Closes: #392362).
  * Bug fix: "Homepage field in debian/control undocumented", thanks to
    Mario Iseli                                              (Closes: #452105).
  * Bug fix: "Policy inconsistent with reality: base subsection no longer
    used", thanks to Magnus Holmgren, Bernd Zeimetz, and Colin Watson
                                                             (Closes: #442070).
  * Bug fix: "Inclusion of Apache Software License versions in
    /usr/share/common-licenses", thanks to Barry Hawkins     (Closes: #291460).
  * Bug fix: "[Amended] copyright should include notice if a package is
    not a part of Debian distribution", thanks to Taketoshi Sano
                                                             (Closes: #65577).
  * Bug fix: "Examples of dpkg frontends should mention apt now", thanks
    to Josh Triplett                                         (Closes: #455602).
  * Bug fix: "Minor typos and wording suggestions", thanks to Michael
    Tautschnig                                               (Closes: #422552).
  * Add an md5sums control file.
  * Remove build system support for FHS 2.1 and FSSTND, mostly commented out.
  * Remove the FSSTND license from debian/copyright; no FSSTND files are
    currently part of policy.